# goit-python-web-homework-13

./: README.md
contacts_book/: main.py  pyproject.toml  requirements.txt
contacts_book/contacts_book/conf/: config.py
contacts_book/contacts_book/database/: db.py  models.py
contacts_book/contacts_book/repository/: contacts.py  users.py
contacts_book/contacts_book/routes/: auth.py  contacts.py  users.py
contacts_book/contacts_book/services/: auth.py  cloud_image.py  email.py
web_quotes/: pyproject.toml  requirements.txt
web_quotes/web_quotes/: manage.py
web_quotes/web_quotes/quotes/: forms.py  models.py  urls.py  utils.py  views.py
web_quotes/web_quotes/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
web_quotes/web_quotes/quotes/static/quotes/: style.css
web_quotes/web_quotes/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  base.html  index.html
web_quotes/web_quotes/quotes/templatetags/: extract.py
web_quotes/web_quotes/quotes/utils/: config_mongodb.ini
web_quotes/web_quotes/users/: forms.py  urls.py  views.py
web_quotes/web_quotes/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_email.html  signup.html
web_quotes/web_quotes/utils/: migration.py  test123.py
web_quotes/web_quotes/web_quotes/: asgi.py  settings.py  urls.py  wsgi.py
