[tool.poetry]
name = "web-quotes"
version = "0.1.0"
description = ""
authors = ["Oleksii Hladkov <agladkoff17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
pymongo = "^4.6.0"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
